# python-cookie

./: LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .dockerignore  .gitignore  Dockerfile  README.md  mkdocs.yml  pyproject.toml  setup.py
{{cookiecutter.project_slug}}/.github/workflows/: matrix.json  tests-static.yaml  tests.yaml
{{cookiecutter.project_slug}}/docker/: Dockerfile  README.md
{{cookiecutter.project_slug}}/docs/: about.md  installation.md  reference.md
{{cookiecutter.project_slug}}/src/{{ cookiecutter.project_slug }}/: __init__.py  _cli_utils.py  _version.py  cli.py  utils.py  {{ cookiecutter.project_slug }}.py
{{cookiecutter.project_slug}}/tests/: test_cli.py  test_cli_utils.py  test_{{ cookiecutter.project_slug }}.py
