[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = '{{ cookiecutter.project_slug }}'
version = "0.1.0" # HINT: Update your package version here.
authors = [
  {email = "{{ cookiecutter.email }}"},
  {name = "{{ cookiecutter.full_name.replace('\"', '\\\"') }}"}
]
description = '{{ cookiecutter.project_short_description }}'
readme = 'README.md'
requires-python = ">=3.7"
keywords = ['{{ cookiecutter.project_slug }}']
license = {file = "LICENSE"}
classifiers=[
    'Natural Language :: English',
    'Intended Audience :: Developers',
    'Development Status :: 1 - Planning',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
# HINT: Define you package dependencies here.
dependencies = [
]

[project.urls]
repository = 'https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}'
{% if 'no' not in cookiecutter.command_line_interface|lower %}
[project.scripts]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.project_slug }}.cli:main"
{% endif %}
